# IxeRam

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: KittyGraphics.hpp  MemoryEngine.hpp  Scanner.hpp  TUI.hpp
src/: MemoryEngine.cpp  Scanner.cpp  TUI.cpp  TUI_run.cpp  main.cpp  speedhack.c
